Added get_latest_modified_directory function
Added get_latest_modified_directory function to find the latest pim and pinto file directories.

--- a/Products Embedding.ipynb
+++ b/Products Embedding.ipynb
@@ -78,52 +78,12 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "71df4379-59c0-41d3-89c9-2beeae1a7e0c",
-     "showTitle": false,
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "#Set configurations\n",
-    "spark.conf.set(f\"fs.azure.account.auth.type.{storage_account}.dfs.core.windows.net\", \"OAuth\")\n",
-    "spark.conf.set(f\"fs.azure.account.oauth.provider.type.{storage_account}.dfs.core.windows.net\", \"org.apache.hadoop.fs.azurebfs.oauth2.ClientCredsTokenProvider\")\n",
-    "spark.conf.set(f\"fs.azure.account.oauth2.client.id.{storage_account}.dfs.core.windows.net\", service_application_id)\n",
-    "spark.conf.set(f\"fs.azure.account.oauth2.client.secret.{storage_account}.dfs.core.windows.net\", service_credential)\n",
-    "spark.conf.set(f\"fs.azure.account.oauth2.client.endpoint.{storage_account}.dfs.core.windows.net\", f\"https://login.microsoftonline.com/{directory_id}/oauth2/token\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
-     "inputWidgets": {},
-     "nuid": "0b480bcb-08e4-4262-b0a3-956c3fa499a4",
-     "showTitle": false,
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "#Define service principals\n",
-    "service_credential = dbutils.secrets.get(scope='kv-8451-tm-media-dev',key='spTmMediaDev-pw')\n",
-    "service_application_id = dbutils.secrets.get(scope='kv-8451-tm-media-dev',key='spTmMediaDev-app-id')\n",
-    "directory_id = \"5f9dc6bd-f38a-454a-864c-c803691193c5\"\n",
-    "storage_account = 'sa8451posprd'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
-     "inputWidgets": {},
-     "nuid": "daa70c1a-5d67-44cf-8a35-34e1922364ac",
      "showTitle": false,
      "title": ""
     }
@@ -148,20 +108,43 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "c5c09813-67f2-477a-986c-384d10e0707c",
+     "nuid": "0b480bcb-08e4-4262-b0a3-956c3fa499a4",
      "showTitle": false,
      "title": ""
     }
    },
    "outputs": [],
    "source": [
-    "#To do:  look for latest pinto and pim files\n",
-    "pinto_path = 'abfss://data@sa8451entlakegrnprd.dfs.core.windows.net/source/third_party/prd/pinto/pinto_effo_kroger_export_20230417'\n",
-    "pinto_prods = spark.read.parquet(pinto_path)\n",
-    "pim_path = \"abfss://pim@sa8451posprd.dfs.core.windows.net/pim_core/by_cycle/cycle_date=20230408\"\n",
-    "pim_core = spark.read.parquet(pim_path)\n",
-    "search_path = \"abfss://personloyalty@sa8451dbxadhocprd.dfs.core.windows.net/relevancy/e451_query2concept2vec/20221007/query2concept2vec.parquet\"\n",
-    "search_emb = spark.read.parquet(search_path)"
+    "#Define service principals\n",
+    "service_credential = dbutils.secrets.get(scope='kv-8451-tm-media-dev',key='spTmMediaDev-pw')\n",
+    "service_application_id = dbutils.secrets.get(scope='kv-8451-tm-media-dev',key='spTmMediaDev-app-id')\n",
+    "directory_id = \"5f9dc6bd-f38a-454a-864c-c803691193c5\"\n",
+    "storage_account = 'sa8451posprd'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "daa70c1a-5d67-44cf-8a35-34e1922364ac",
+     "showTitle": false,
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#Set configurations\n",
+    "spark.conf.set(f\"fs.azure.account.auth.type.{storage_account}.dfs.core.windows.net\", \"OAuth\")\n",
+    "spark.conf.set(f\"fs.azure.account.oauth.provider.type.{storage_account}.dfs.core.windows.net\", \"org.apache.hadoop.fs.azurebfs.oauth2.ClientCredsTokenProvider\")\n",
+    "spark.conf.set(f\"fs.azure.account.oauth2.client.id.{storage_account}.dfs.core.windows.net\", service_application_id)\n",
+    "spark.conf.set(f\"fs.azure.account.oauth2.client.secret.{storage_account}.dfs.core.windows.net\", service_credential)\n",
+    "spark.conf.set(f\"fs.azure.account.oauth2.client.endpoint.{storage_account}.dfs.core.windows.net\", f\"https://login.microsoftonline.com/{directory_id}/oauth2/token\")"
    ]
   },
   {
@@ -199,7 +182,9 @@
     "\n",
     "# minus 1 year\n",
     "today_year_ago = (datetime.today() - relativedelta(years=1)).strftime('%Y-%m-%d')\n",
+    "\n",
     "today = datetime.today().strftime('%Y-%m-%d')\n",
+    "yesterday = (datetime.today() - relativedelta(days=1)).strftime('%Y%m%d')\n",
     "\n",
     "# SPARK SETUP\n",
     "acds = ACDS(use_sample_mart=False)\n",
@@ -208,7 +193,55 @@
     "# Pull acds transactions over the past year\n",
     "acds_pyear_transactions = acds.get_transactions(today_year_ago, today, apply_golden_rules=golden_rules(['customer_exclusions']))\n",
     "pyear_purchased_upcs = acds_pyear_transactions.select(acds_pyear_transactions.gtin_no).distinct()\n",
-    "pyear_purchased_upcs = pyear_purchased_upcs.select(pyear_purchased_upcs.gtin_no.alias('upc'))"
+    "pyear_purchased_upcs = pyear_purchased_upcs.select(pyear_purchased_upcs.gtin_no.alias('upc'))\n",
+    "\n",
+    "def get_latest_modified_directory(pDirectory):\n",
+    "    \"\"\"\n",
+    "    get_latest_modified_file_from_directory:\n",
+    "        For a given path to a directory in the data lake, return the directory that was last modified. \n",
+    "        Input path format expectation: 'abfss://x@sa8451x.dfs.core.windows.net/\n",
+    "    \"\"\"\n",
+    "    #Set to get a list of all folders in this directory and the last modified date time of each\n",
+    "    vDirectoryContentsList = list(dbutils.fs.ls(pDirectory))\n",
+    "\n",
+    "    #Convert the list returned from get_dir_content into a dataframe so we can manipulate the data easily. Provide it with column headings. \n",
+    "    #You can alternatively sort the list by LastModifiedDateTime and get the top record as well. \n",
+    "    df = spark.createDataFrame(vDirectoryContentsList,['FullFilePath', 'LastModifiedDateTime'])\n",
+    "\n",
+    "    #Get the latest modified date time scalar value\n",
+    "    maxLatestModifiedDateTime = df.agg({\"LastModifiedDateTime\": \"max\"}).collect()[0][0]\n",
+    "\n",
+    "    #Filter the data frame to the record with the latest modified date time value retrieved\n",
+    "    df_filtered = df.filter(df.LastModifiedDateTime == maxLatestModifiedDateTime)\n",
+    "    \n",
+    "    #return the file name that was last modifed in the given directory\n",
+    "    return df_filtered.first()['FullFilePath']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "ada0426b-9751-4d8d-9889-855d8f114654",
+     "showTitle": false,
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#To do:  look for latest pinto and pim files\n",
+    "pinto_path = get_latest_modified_directory('abfss://data@sa8451entlakegrnprd.dfs.core.windows.net/source/third_party/prd/pinto/')\n",
+    "pinto_prods = spark.read.parquet(pinto_path)\n",
+    "pim_path = get_latest_modified_directory(\"abfss://pim@sa8451posprd.dfs.core.windows.net/pim_core/by_cycle/\")\n",
+    "pim_core = spark.read.parquet(pim_path)\n",
+    "search_path = \"abfss://personloyalty@sa8451dbxadhocprd.dfs.core.windows.net/relevancy/e451_query2concept2vec/20221007/query2concept2vec.parquet\"\n",
+    "search_emb = spark.read.parquet(search_path)"
    ]
   },
   {
@@ -493,7 +526,7 @@
     "# Join together into output dataframe\n",
     "import pandas as pd\n",
     "output_df = spark.createDataFrame(pd.DataFrame({\"gtin_no\": pandas_df[\"gtin_no\"].to_list(), \"vector\": pandas_df[\"vector\"].to_list()}))\n",
-    "output_df.write.mode(\"overwrite\").parquet('abfss://media@sa8451dbxadhocprd.dfs.core.windows.net/Users/s354840/embedded_dimensions/allpimto_product_vectors_diet_description/' + today + '/upc_vectors')"
+    "output_df.write.mode(\"overwrite\").parquet('abfss://media@sa8451dbxadhocprd.dfs.core.windows.net/Users/s354840/embedded_dimensions/last_year_product_vectors_diet_description/' + today + '/upc_vectors')"
    ]
   },
   {
