--- a/Products_Embedding.ipynb
+++ b/Products_Embedding.ipynb
@@ -552,7 +552,7 @@
    "notebookMetadata": {
     "pythonIndentUnit": 2
    },
-   "notebookName": "Products Embedding",
+   "notebookName": "Products_Embedding",
    "notebookOrigID": 775292518014095,
    "widgets": {}
   }
