Modified products_embedding creation and search_embedding output
Modified products_embedding to pull all pinto and pim products instead of ones sold in last year so all of them can be modeled.  Also removed steps to convert to pandas dataframe to decrease overhead with the addition of processing 4 MM more products.  search_embedding changes were limited to putting a list of future diets in comments, changing json_payload variable assignment, and removing diet_ from naming convention.

--- a/Products_Embedding.ipynb
+++ b/Products_Embedding.ipynb
@@ -164,36 +164,10 @@
    },
    "outputs": [],
    "source": [
-    "# IMPORT PACKAGES\n",
-    "from effodata import ACDS, golden_rules, Joiner, Sifter, Equality, sifter, join_on, joiner\n",
-    "from kpi_metrics import (\n",
-    "     KPI,\n",
-    "     AliasMetric,\n",
-    "     CustomMetric,\n",
-    "     AliasGroupby,\n",
-    "     Rollup,\n",
-    "     Cube,\n",
-    "     available_metrics,\n",
-    "     get_metrics\n",
-    ")\n",
-    "\n",
     "from datetime import datetime\n",
     "from dateutil.relativedelta import relativedelta\n",
     "\n",
-    "# minus 1 year\n",
-    "today_year_ago = (datetime.today() - relativedelta(years=1)).strftime('%Y-%m-%d')\n",
-    "\n",
     "today = datetime.today().strftime('%Y-%m-%d')\n",
-    "yesterday = (datetime.today() - relativedelta(days=1)).strftime('%Y%m%d')\n",
-    "\n",
-    "# SPARK SETUP\n",
-    "acds = ACDS(use_sample_mart=False)\n",
-    "kpi = KPI(use_sample_mart=False)\n",
-    "\n",
-    "# Pull acds transactions over the past year\n",
-    "acds_pyear_transactions = acds.get_transactions(today_year_ago, today, apply_golden_rules=golden_rules(['customer_exclusions']))\n",
-    "pyear_purchased_upcs = acds_pyear_transactions.select(acds_pyear_transactions.gtin_no).distinct()\n",
-    "pyear_purchased_upcs = pyear_purchased_upcs.select(pyear_purchased_upcs.gtin_no.alias('upc'))\n",
     "\n",
     "def get_latest_modified_directory(pDirectory):\n",
     "    \"\"\"\n",
@@ -239,9 +213,7 @@
     "pinto_path = get_latest_modified_directory('abfss://data@sa8451entlakegrnprd.dfs.core.windows.net/source/third_party/prd/pinto/')\n",
     "pinto_prods = spark.read.parquet(pinto_path)\n",
     "pim_path = get_latest_modified_directory(\"abfss://pim@sa8451posprd.dfs.core.windows.net/pim_core/by_cycle/\")\n",
-    "pim_core = spark.read.parquet(pim_path)\n",
-    "search_path = \"abfss://personloyalty@sa8451dbxadhocprd.dfs.core.windows.net/relevancy/e451_query2concept2vec/20221007/query2concept2vec.parquet\"\n",
-    "search_emb = spark.read.parquet(search_path)"
+    "pim_core = spark.read.parquet(pim_path)"
    ]
   },
   {
@@ -391,29 +363,7 @@
     "    .withColumn('sentence_string', concat_ws(',', f.col('diet_sentence')))\\\n",
     "    .withColumn('full_string', when(f.col('sentence_string') == '', concat(f.col('name'), f.lit('.'))).otherwise(concat(f.col('name'), f.lit(' is '), f.col('sentence_string'), f.lit('.'))))\\\n",
     "    .withColumn('diet_string', f.regexp_replace(f.col('full_string'), ',,', ','))\\\n",
-    "    .select('gtin_no', 'diet_string')\n",
-    "vector = vector.join(pyear_purchased_upcs, pyear_purchased_upcs.upc == vector.gtin_no)\n",
-    "vector = vector.select('gtin_no', 'diet_string')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "3d172bba-2dcc-453b-88e2-dedb67c2ed8f",
-     "showTitle": false,
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "pandas_df = vector.toPandas()"
+    "    .select('gtin_no', 'diet_string')"
    ]
   },
   {
@@ -461,7 +411,7 @@
    "outputs": [],
    "source": [
     "# Extract \"text\" field into a list\n",
-    "sentence = pandas_df.diet_string.tolist() "
+    "sentence = vector.rdd.map(lambda column: column.diet_string).collect()"
    ]
   },
   {
@@ -482,7 +432,7 @@
    "outputs": [],
    "source": [
     "# Encode vectors from sentences\n",
-    "# You may need a GPU cluster to do this efficiently 3:01 p.m.\n",
+    "# You may need a GPU cluster to do this efficiently\n",
     "vectors = model.encode(sentence, normalize_embeddings=True) \n"
    ]
   },
@@ -503,7 +453,7 @@
    },
    "outputs": [],
    "source": [
-    "pandas_df['vector'] = vectors.tolist()"
+    "vectors_list = vectors.tolist()"
    ]
   },
   {
@@ -525,7 +475,7 @@
    "source": [
     "# Join together into output dataframe\n",
     "import pandas as pd\n",
-    "output_df = spark.createDataFrame(pd.DataFrame({\"gtin_no\": pandas_df[\"gtin_no\"].to_list(), \"vector\": pandas_df[\"vector\"].to_list()}))\n",
+    "output_df = spark.createDataFrame(pd.DataFrame({\"gtin_no\": vector.rdd.map(lambda column: column.gtin_no).collect(), \"vector\": vectors_list}))\n",
     "output_df.write.mode(\"overwrite\").parquet('abfss://media@sa8451dbxadhocprd.dfs.core.windows.net/Users/s354840/embedded_dimensions/last_year_product_vectors_diet_description/' + today + '/upc_vectors')"
    ]
   },
