Write vectors out

--- a/Products_Embedding.ipynb
+++ b/Products_Embedding.ipynb
@@ -453,7 +453,8 @@
    },
    "outputs": [],
    "source": [
-    "vectors_list = vectors.tolist()"
+    "vectors_list = vectors.tolist()\n",
+    "vectors_list.write.mode(\"overwrite\").parquet('abfss://media@sa8451dbxadhocprd.dfs.core.windows.net/Users/s354840/embedded_dimensions/last_year_product_vectors_diet_description/' + today + '/vectors')"
    ]
   },
   {
