Mods to get cluster to process

--- a/Products_Embedding.ipynb
+++ b/Products_Embedding.ipynb
@@ -433,7 +433,7 @@
    "source": [
     "# Encode vectors from sentences\n",
     "# You may need a GPU cluster to do this efficiently\n",
-    "vectors = model.encode(sentence, normalize_embeddings=True) \n"
+    "vectors = model.encode(sentence, normalize_embeddings=True).tolist()\n"
    ]
   },
   {
@@ -453,8 +453,8 @@
    },
    "outputs": [],
    "source": [
-    "vectors_list = vectors.tolist()\n",
-    "vectors_list.write.mode(\"overwrite\").parquet('abfss://media@sa8451dbxadhocprd.dfs.core.windows.net/Users/s354840/embedded_dimensions/last_year_product_vectors_diet_description/' + today + '/vectors')"
+    "vectors_list= spark.createDataFrame(vectors)\n",
+    "vectors_list.write.mode(\"overwrite\").parquet('abfss://media@sa8451dbxadhocprd.dfs.core.windows.net/Users/s354840/embedded_dimensions/last_year_product_vectors_diet_description/vectors')"
    ]
   },
   {
@@ -476,7 +476,7 @@
    "source": [
     "# Join together into output dataframe\n",
     "import pandas as pd\n",
-    "output_df = spark.createDataFrame(pd.DataFrame({\"gtin_no\": vector.rdd.map(lambda column: column.gtin_no).collect(), \"vector\": vectors_list}))\n",
+    "output_df = spark.createDataFrame(pd.DataFrame({\"gtin_no\": vector.rdd.map(lambda column: column.gtin_no).collect(), \"vector\": vectors}))\n",
     "output_df.write.mode(\"overwrite\").parquet('abfss://media@sa8451dbxadhocprd.dfs.core.windows.net/Users/s354840/embedded_dimensions/last_year_product_vectors_diet_description/' + today + '/upc_vectors')"
    ]
   },
