removing step to remove memory work to get to end

--- a/Products_Embedding.ipynb
+++ b/Products_Embedding.ipynb
@@ -453,8 +453,8 @@
    },
    "outputs": [],
    "source": [
-    "vectors_list= spark.createDataFrame(vectors)\n",
-    "vectors_list.write.mode(\"overwrite\").parquet('abfss://media@sa8451dbxadhocprd.dfs.core.windows.net/Users/s354840/embedded_dimensions/last_year_product_vectors_diet_description/vectors')"
+    "#vectors_list= spark.createDataFrame(vectors)\n",
+    "#vectors_list.write.mode(\"overwrite\").parquet('abfss://media@sa8451dbxadhocprd.dfs.core.windows.net/Users/s354840/embedded_dimensions/last_year_product_vectors_diet_description/vectors')"
    ]
   },
   {
