--- a/Products_Embedding.ipynb
+++ b/Products_Embedding.ipynb
@@ -164,10 +164,13 @@
    },
    "outputs": [],
    "source": [
+    "# get current datetime\n",
     "from datetime import datetime\n",
     "from dateutil.relativedelta import relativedelta\n",
     "\n",
-    "today = datetime.today().strftime('%Y-%m-%d')\n",
+    "# minus 1 year\n",
+    "today_year_ago = (datetime.today() - relativedelta(years=1)).strftime('%Y%m%d')\n",
+    "today = datetime.today().strftime('%Y%m%d')\n",
     "\n",
     "def get_latest_modified_directory(pDirectory):\n",
     "    \"\"\"\n",
@@ -189,7 +192,30 @@
     "    df_filtered = df.filter(df.LastModifiedDateTime == maxLatestModifiedDateTime)\n",
     "    \n",
     "    #return the file name that was last modifed in the given directory\n",
-    "    return df_filtered.first()['FullFilePath']"
+    "    return df_filtered.first()['FullFilePath']\n",
+    "\n",
+    "# IMPORT PACKAGES\n",
+    "import pandas as pd\n",
+    "pd.set_option('display.max_columns',500)\n",
+    "from poirot import SparkManager\n",
+    "from effodata import ACDS, golden_rules, Joiner, Sifter, Equality, sifter, join_on, joiner\n",
+    "from kpi_metrics import (\n",
+    "     KPI,\n",
+    "     AliasMetric,\n",
+    "     CustomMetric,\n",
+    "     AliasGroupby,\n",
+    "     Rollup,\n",
+    "     Cube,\n",
+    "     available_metrics,\n",
+    "     get_metrics\n",
+    ")\n",
+    "\n",
+    "acds = ACDS(use_sample_mart=False)\n",
+    "kpi = KPI(use_sample_mart=False)\n",
+    "\n",
+    "# Look at acds transactions for all households the past year\n",
+    "acds_previous_year_transactions = acds.get_transactions(today_year_ago, today, apply_golden_rules=golden_rules(['customer_exclusions', \"fuel_exclusions\"]))\n",
+    "acds_previous_year_transactions = acds_previous_year_transactions.where(acds_previous_year_transactions.scn_unt_qy > 0)"
    ]
   },
   {
@@ -213,7 +239,10 @@
     "pinto_path = get_latest_modified_directory('abfss://data@sa8451entlakegrnprd.dfs.core.windows.net/source/third_party/prd/pinto/')\n",
     "pinto_prods = spark.read.parquet(pinto_path)\n",
     "pim_path = get_latest_modified_directory(\"abfss://pim@sa8451posprd.dfs.core.windows.net/pim_core/by_cycle/\")\n",
-    "pim_core = spark.read.parquet(pim_path)"
+    "pim_core = spark.read.parquet(pim_path)\n",
+    "\n",
+    "embedded_dimensions_dir = 'abfss://media@sa8451dbxadhocprd.dfs.core.windows.net/embedded_dimensions'\n",
+    "product_vectors_dir = '/product_vectors_diet_description/cycle_date='"
    ]
   },
   {
@@ -363,7 +392,9 @@
     "    .withColumn('sentence_string', concat_ws(',', f.col('diet_sentence')))\\\n",
     "    .withColumn('full_string', when(f.col('sentence_string') == '', concat(f.col('name'), f.lit('.'))).otherwise(concat(f.col('name'), f.lit(' is '), f.col('sentence_string'), f.lit('.'))))\\\n",
     "    .withColumn('diet_string', f.regexp_replace(f.col('full_string'), ',,', ','))\\\n",
-    "    .select('gtin_no', 'diet_string')"
+    "    .select('gtin_no', 'diet_string')\n",
+    "vector = vector.join(pyear_purchased_upcs, pyear_purchased_upcs.upc == vector.gtin_no)\n",
+    "vector = vector.select('gtin_no', 'diet_string')"
    ]
   },
   {
@@ -446,27 +477,6 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "8561a301-132b-40d7-8e0f-32f2ebccdc69",
-     "showTitle": false,
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "#vectors_list= spark.createDataFrame(vectors)\n",
-    "#vectors_list.write.mode(\"overwrite\").parquet('abfss://media@sa8451dbxadhocprd.dfs.core.windows.net/Users/s354840/embedded_dimensions/last_year_product_vectors_diet_description/vectors')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
      "nuid": "bdb1b83c-52e8-4b03-81ab-d4fccae63cb5",
      "showTitle": false,
      "title": ""
@@ -477,7 +487,7 @@
     "# Join together into output dataframe\n",
     "import pandas as pd\n",
     "output_df = spark.createDataFrame(pd.DataFrame({\"gtin_no\": vector.rdd.map(lambda column: column.gtin_no).collect(), \"vector\": vectors}))\n",
-    "output_df.write.mode(\"overwrite\").parquet('abfss://media@sa8451dbxadhocprd.dfs.core.windows.net/Users/s354840/embedded_dimensions/last_year_product_vectors_diet_description/' + today + '/upc_vectors')"
+    "output_df.write.mode(\"overwrite\").format(\"delta\").save(embedded_dimensions_dir + product_vectors_dir + today)"
    ]
   },
   {
