Fixed vector join

--- a/Products_Embedding.ipynb
+++ b/Products_Embedding.ipynb
@@ -393,7 +393,7 @@
     "    .withColumn('full_string', when(f.col('sentence_string') == '', concat(f.col('name'), f.lit('.'))).otherwise(concat(f.col('name'), f.lit(' is '), f.col('sentence_string'), f.lit('.'))))\\\n",
     "    .withColumn('diet_string', f.regexp_replace(f.col('full_string'), ',,', ','))\\\n",
     "    .select('gtin_no', 'diet_string')\n",
-    "vector = vector.join(pyear_purchased_upcs, pyear_purchased_upcs.upc == vector.gtin_no)\n",
+    "vector = vector.join(acds_previous_year_transactions, acds_previous_year_transactions.gtin_no == vector.gtin_no)\n",
     "vector = vector.select('gtin_no', 'diet_string')"
    ]
   },
