Put previous year upc filter back

--- a/Products_Embedding.ipynb
+++ b/Products_Embedding.ipynb
@@ -215,7 +215,9 @@
     "\n",
     "# Look at acds transactions for all households the past year\n",
     "acds_previous_year_transactions = acds.get_transactions(today_year_ago, today, apply_golden_rules=golden_rules(['customer_exclusions', \"fuel_exclusions\"]))\n",
-    "acds_previous_year_transactions = acds_previous_year_transactions.where(acds_previous_year_transactions.scn_unt_qy > 0)"
+    "acds_previous_year_transactions = acds_previous_year_transactions.where(acds_previous_year_transactions.scn_unt_qy > 0)\n",
+    "pyear_purchased_upcs = acds_previous_year_transactions.select(acds_previous_year_transactions.gtin_no).distinct()\n",
+    "pyear_purchased_upcs = pyear_purchased_upcs.select(pyear_purchased_upcs.gtin_no.alias('upc'))"
    ]
   },
   {
@@ -393,7 +395,7 @@
     "    .withColumn('full_string', when(f.col('sentence_string') == '', concat(f.col('name'), f.lit('.'))).otherwise(concat(f.col('name'), f.lit(' is '), f.col('sentence_string'), f.lit('.'))))\\\n",
     "    .withColumn('diet_string', f.regexp_replace(f.col('full_string'), ',,', ','))\\\n",
     "    .select('gtin_no', 'diet_string')\n",
-    "vector = vector.join(acds_previous_year_transactions, acds_previous_year_transactions.gtin_no == vector.gtin_no).drop(acds_previous_year_transactions.gtin_no)\n",
+    "vector = vector.join(pyear_purchased_upcs, pyear_purchased_upcs.upc == vector.gtin_no)\n",
     "vector = vector.select('gtin_no', 'diet_string')"
    ]
   },
